# digroot

./: readme.md
模型/deepseek_v4/: DeepSeek_V4_模型结构学习.md  DeepSpec_核心代码注释.md
算子/算子开发基础/00 - 环境搭建与基础demo/: CMakeLists.txt  add.asc  【算子】1. Ascend C 最简工程实践记录.md
算子/算子开发基础/01 - 熟悉算子开发能力边界/: 01-TPipeTQue 框架、Matmul 高阶 API 与算子开发能力边界.md
算子/算子开发基础/02 - 了解融合算子/: 02-融合算子 Advanced vs Basic API 对比与深度解析.md
算子/算子开发基础/03 - 调试工具链/: 03-调试工具链 printf Dump CPU Debug.md
算子/算子开发基础/04 - 性能调优/: 04-性能调优 Bank Conflict 与搬运优化.md
算子/算子开发基础/05 - 上机实验/: 05-两级流水Vector Add与msprof性能分析.md
